Document stock IntelliJ inject recipe and 1.0 packaging fate
Close #320 and #321 from the #209 follow-up list:

- stock-intellij-recipe.md: vmoptions, PID attach, Jewel ide.counter/ide.popup
  tags, automated vs manual evidence chain
- packaging-1.0-decision.md: keep nested inject-runtime experimental for 1.0
  (do not promote, do not strip)
- User guide: agent inject bootstrap path; intellij external attach section
- STABILITY + spike cross-links